style.css
/* ... */
.main-block .hero-image{
    width: 100%;
    height: 100%;
    background-size: 250% 100%;
    /* background-image:linear-gradient(to left top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2)), url("./assets/mech1.jpg"); */
    background-image:linear-gradient(to right, rgba(0, 0, 0, 0.8)), url("./assets/mech3.jpg");
    /* background-image: url("./assets/mech3.jpg"); */
    /* background-position: 57% 10%; */
    background-position: center center;
    /* object-fit: contain; */
    background-repeat: no-repeat;
    /* background-size: cover; */
    /* transform: scale(.8); */
    /* box-shadow: inset 0 5px 10px 10px white; */
}

.main-block .hero-info{
    position: absolute;
    /* margin-top: 6%; */
    width: 90%;
    height: 80%;
    transform: translate(-50%,-50%);
    top:50%;
    left: 50%;
    /* border: 1px solid white; */
    border-radius: 10px;
    color: white;
    display: flex;
    flex-direction: column;
    /* padding-top: 2rem; */
    /* background-color: blue; */
    /* background-color: blue; */
}

.hero-info .hero-info-name-block{
    width: 100%;
    height: 40%;
    /* background-color: #fd7e14; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 2rem;
    /* background-color: red; */
        /* background-color: yellow; */

}

.hero-info .hero-info-name-block h1{
    margin-bottom: 1rem;
    /* color: yellow; */
}

.hero-info .hero-info-name-block h4{
    margin-bottom: .5rem;
}

.hero-info .hero-info-name-block button{
    padding: 1rem 4rem;
    background-color: none;
    border: 1px solid white;
    border-radius: 10px;
    margin-top: 1rem;
    background-color: transparent;
    color: white;
    font-weight: bolder;
    font-size: 1.2rem;
}

.hero-info .hero-info-address-block{
    width: 100%;
    height: 60%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* padding: 2rem 0; */
    font-size: .8rem;
    /* border: 1px solid white; */
    border-radius: 10px;
    /* background-color: red; */
    padding-top: 4rem;
}

.hero-info-address-block .address-item{
    display: flex;
    /* border-bottom: 1px solid white; */
    width: 100%;
    height: 40%;
    padding: 2.5rem;
    /* background-color: red; */
}

.hero-info-address-block .address-item .hero-info-number{
    padding: 1rem 0;
}


.hero-info-address-block .address-item .item h3{
    text-decoration: underline;
}

.hero-info-address-block .address-item .icon{
    width: 20%;
    height: 100%;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    font-size: 2rem;
    /* background-color: red; */
}

.hero-info-address-block .address-item .item{
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

/* ********************************************* SERVICES **************************************** */

.main-container #site-services{
    padding-top: 12vh;
    width: 100%;
    height: 150vh;
    /* background-color: yellow; */
}

#site-services .services-header{
    width: 100%;
    height: 7%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#site-services .services-main{
    width: 100%;
    height: 93%;
    /* background-color: #198754; */
    display: grid;
    grid-template-rows: repeat(8,1fr);
    padding: 1rem;
    gap: .5rem;
    /* align-items: start;
    justify-items: start; */
}

.services-main .services-item{
    border: 1px solid black;
    display: flex;
    border-radius: 5px;
    /* background-color: #dc3545; */
}

.services-item .service-image{
    width: 45%;
    height: 100%;
    /* background-color: #0d6efd; */
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

.services-item .service-image img{
    width: 50%;
    height: 50%;
    object-fit: contain;
}

.services-item .service-description{
    width: 55%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* padding: 4rem 0; */
    font-size: 1.2rem;
    font-weight: bolder;
    /* background-color: #198754; */
}


/* ****************************** ABOUT ME **************************************** */

#about-me{
    width: 100%;
    height: 100vh;
    padding-top: 12vh;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.9)) ;
    color: white;
    display: flex;
    flex-direction:column;
    justify-content: flex-start;
    align-items: center;
}

#about-me .about-me-header{
     width: 100%;
    height: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
    /* background-color: red; */
}

#about-me .about-me-pic{
    width: 100%;
    height: 30%;
    /* background-color: red; */
    display: flex;
    justify-content: center;
    align-items: center;
    padding: .5rem;
    /* margin-bottom: 1rem; */
}

#about-me .about-me-pic img{
    object-fit: cover;
    width: 100%;
    height: 100%;
    border-radius: 5px;
    box-shadow: inset 2px 2px 5px 5px rgba(0, 0, 0, 0.8);
}


#about-me .about-me-content{
    height: 50%;
    width: 100%;
    display: flex;
    flex-direction: column;
    /* background-color: pink; */
}
.about-me-content .about-me-text{
    width: 100%;
    height: 70%;
    /* background-color: blue; */
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem 2rem;
    word-break: break-all;
}

.about-me-content .reviews-block{
    width: 100%;
    flex: 1;
    /* background-color: red; */
    display: flex;
    justify-content: center;
    align-items: center;
        /* background-color: yellow; */

}

.reviews-block .gr-button{
    width: 90%;
    height: 80%;
    border: 1px solid white;
    border-radius: 10px;
    display: flex;
    text-decoration: none;
    color: red;
    padding: 0 2rem;
    /* background-color: blue; */
}
/* ... */

